syntax = "proto3";

option go_package = "grpc/golangServer/proto";


package moduleconfig;

service ModuleConfiguration {
  rpc ConfigureModule (Configuration) returns (Confirmation) {}
  rpc RequestStat (StatRequest) returns (StatReply) {}
}

message StatRequest {
  string message = 1;
}

message StatReply {
  string serviceName = 1;
  bool isReady = 2;
}

message Configuration {
  string filePath = 1;
  string namespace = 2;
}

message Confirmation {
  string serviceName = 1;
  bool wasSuccessful = 2;
  string errorMessage = 3;
}
